--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     "rules": {
         "no-nested-ternary": "off",
         "no-extra-boolean-cast": "off",
+        "no-case-declarations": "off",
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "react/jsx-props-no-spreading": "off",
         "react/state-in-constructor": [1, "always"],
@@ -17,11 +18,15 @@
         "react/react-in-jsx-scope": "off",
         "react/prefer-stateless-function": "off",
         "react/prop-types": [1],
+        "react/require-default-props": "off",
         "react/forbid-prop-types": "off",
         "jsx-a11y/anchor-is-valid": "off",
+        "jsx-a11y/click-events-have-key-events": "off",
+        "jsx-a11y/no-static-element-interactions": "off",
         "jsx-a11y/no-autofocus": "off",
         "jsx-a11y/label-has-associated-control": "off",
         "import/prefer-default-export": "off",
+        "import/no-extraneous-dependencies": "off",
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
         "react/destructuring-assignment": "off"
