added link to get airlines logo

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,12 +9,14 @@
     "plugins": ["react", "jsx-a11y", "import", "react-hooks"],
     "rules": {
         "no-nested-ternary": "off",
+        "no-plusplus": "off",
         "no-extra-boolean-cast": "off",
         "no-case-declarations": "off",
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "react/jsx-props-no-spreading": "off",
         "react/state-in-constructor": [1, "always"],
         "react/static-property-placement": "off",
+        "react/no-array-index-key": "off",
         "react/react-in-jsx-scope": "off",
         "react/prefer-stateless-function": "off",
         "react/prop-types": [1],
